# accelerator

./: .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: docker-image.yml
capsules/arsat-customer-care/: .env  Dockerfile  README.md  claude_stdio.py  consult-tickets.py  deploy.yaml  main.py  pyproject.toml
capsules/arsat-customer-care/.github/workflows/: docker-image.yml
capsules/arsat-customer-care/config/settings/: base.py
capsules/arsat-customer-care/dependencies/: tickets.py
capsules/arsat-customer-care/mocks/: maximo_users.json
capsules/arsat-customer-care/models/: ticket.py
capsules/assistants-infrastructure/: README.md  claude_stdio.py  main.py  pyproject.toml  service.yml
capsules/assistants-infrastructure/assistants_infrastructure.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
capsules/assistants-infrastructure/docs/: uses_cases.md
capsules/bark/triton/tts/: config.pbtxt
capsules/orpheus/: Alquimia Runtime Isolated TTS.ipynb  Triton Orpheus Sample Invocation.ipynb
capsules/orpheus/tts/: config.pbtxt
capsules/orpheus/tts/1/: config.json  model.py
capsules/spam-filter/: annotations.json  label_studio.py  main.py  requirements.txt
capsules/vital-oceans/: Dockerfile  main.py  pyproject.toml  test.py  utils.py
capsules/whisper/triton/: config.pbtxt
capsules/whisper/triton/1/: model.py
model_servers/triton/: Dockerfile  requirements.txt
nlp/: helpers.py
nlp/ETL/: MD Convertor.ipynb  README.md
nlp/ETL/ocr2topic/: OCR.ipynb  SlackReporter.ipynb  TWYD.ipynb  TWYDOCR.ipynb  ocr2Topic.pipeline
nlp/generative-ai/: fine-tune-unsloth.ipynb
nlp/generative-ai/generator/: Chat Generator.ipynb  README.md  requirements.txt
nlp/generative-ai/generator/helpers/: my_helpers.py
nlp/pipelines/text-classification/: Text Classification.pipeline  load_dataset_pipeline.ipynb  train-transformers-text-classification.ipynb
nlp/pipelines/token-classification/: HF Token Classification Pipeline.pipeline  NER Pipeline Notebook.ipynb  Train Transformers NER.ipynb
nlp/text-classification/: Text Classification Transformers.ipynb
nlp/text-classification/datasets/: Common Language Notebook.ipynb  Intents Pre-process.ipynb  Load Dataset.ipynb  S32 Annotations.ipynb
(+48 files in other folders)
